Limpieza de warnings